--- a/trunk/latex/sorting-ptbr.tex
+++ b/trunk/latex/sorting-ptbr.tex
@@ -473,6 +473,6 @@ Isso ocorre porque o formato IEEE foi projetado para permitir a comparação de 
 %\end{exc}
 
 \begin{exc}
-	A implementação de #radixSort(a,k)# fornecida aqui funciona quando o array de entrada, #a# contém apenas inteiros \cpponly{unsigned}\javaonly{non-negative}. \javaonly{Estenda esta implementação para que ela também funcione corretamente quando #a# contém números inteiros negativos e não negativos.} \cpponly{Escreva uma versão que funcione corretamente para inteiros sinalizados.}
+	A implementação de #radixSort(a,k)# fornecida aqui funciona quando o array de entrada, #a# contém apenas inteiros \pcodeonly{sem sinal}\cpponly{sem sinal}\javaonly{não negativos}.\javaonly{Estenda esta implementação para que ela também funcione corretamente quando #a# contém números inteiros negativos e não negativos.} \cpponly{Escreva uma versão que funcione corretamente para inteiros sinalizados.} \pcodeonly{Escreva uma versão que funcione corretamente para inteiros sinalizados.}
 \end{exc}
 
