--- a/latex/skiplists-ptbr.tex
+++ b/latex/skiplists-ptbr.tex
@@ -7,12 +7,12 @@ Neste capítulo discutiremos uma bela estrutura de dados: a skiplist,
 que possui diversas de aplicações.  Usando uma skiplist, podemos implementar uma
 #Lista# que tenha tempo de $O(\log n)$ para implementações de #get(i)#, #set(i,x)#,
 #add(i,x)#, e #remove(i)#. Nós também podemos implementar uma #SSet# em que
-todas as operação são executadas com tempo esperado de $O(\log #n#)$.
+todas as operações são executadas com tempo esperado de $O(\log #n#)$.
 %Finally, a skiplist can be used to implement a #Rope# in which all
 %operations run in $O(\log #n#)$ time.
 
 A eficiência das skiplists se baseia no uso da randomização.
-Quando um novo elemento é adicionado à skilist, ela utiliza lançamentos aleatórios
+Quando um novo elemento é adicionado à skiplist, ela utiliza lançamentos aleatórios
 de moeda para determinar a altura do novo elemento.  O desempenho das
 skiplists é expresso em termos do tempo de execução esperado e do tamanho do
 caminho. Esta expectativa é baseada nos lançamentos aleatórios de moeda usados
