pequenas correções de digitação

--- a/latex/binarytrees-ptbr.tex
+++ b/latex/binarytrees-ptbr.tex
@@ -408,7 +408,7 @@ para um exemplo.
 \end{exc}
 
 \begin{exc}
-  Implemente um método para a #BinarySearchTree#, #obtemLE(x)#,
+  Implemente um método \mbox{\textbf{obtemLE(x)}}, para a #BinarySearchTree#,
   que retorne uma lista de todos os itens em uma árvore que sejam menores que ou iguais a #x#.  O tempo de execução do seu método deve ser $O(#n#'+#h#)$ no qual $#n#'$ é o número de itens menores que ou iguais a #x# e #h# é a altura da árvore.
 \end{exc}
 
