--- a/latex/rbs-ptbr.tex
+++ b/latex/rbs-ptbr.tex
@@ -223,7 +223,7 @@ a uma permutação aleatória usada para criar a árvore binária aleatória de 
 #x#; ela é verdadeira para cada valor de #x#.
 
 
-\section{#Treap#: Uma árvore Binária de Busca Aleatorizada}
+\section{#Treap#: Uma Árvore Binária de Busca Aleatorizada}
 \seclabel{treap}
 
 \index{Treap@#Treap#}%
