--- a/latex/scapegoat-ptbr.tex
+++ b/latex/scapegoat-ptbr.tex
@@ -1,4 +1,4 @@
-\chapter{Árvores Scapegoat}
+\chapter{Árvores de Bode Expiatório}
 \chaplabel{scapegoat}
 
 Neste capítulo, estudamos uma estrutura de dados de árvore de busca binária, a #ScapegoatTree#. Essa estrutura é baseada na sabedoria comum de que, quando algo dá errado, a primeira coisa que as pessoas tendem a fazer é encontrar alguém para culpar (o \emph{bode expiatório}).
