Adaptação para python3

--- a/latex/intro-ptbr.tex
+++ b/latex/intro-ptbr.tex
@@ -264,7 +264,7 @@ de valores. A interface #Lista# inclui as seguintes operações:
 \begin{enumerate}
 	\item #size()#: retorna #n#, o tamanho da lista
 	\item #get(i)#: retorna o valor $#x#_{#i#}$
-	\item #set(i,x)#: faz o valor de $#x#_{#i#}$ igua a #x#
+	\item #set(i,x)#: faz o valor de $#x#_{#i#}$ igual a #x#
 	\item #add(i,x)#: enfileira #x# na posição #i#, deslocando
 	$#x#_{#i#},\ldots,#x#_{#n#-1}$; \\ 
 	Faz $#x#_{j+1}=#x#_j$, para todo
