Pequenas correções de digitação

--- a/latex/rbs-ptbr.tex
+++ b/latex/rbs-ptbr.tex
@@ -635,7 +635,7 @@ armazenadas nos nós da treap não têm outro uso que manter a árvore balancead
 
   \noindent Exemplo: o código #t2 = t.split(x)# remove de #t# todos os valores maiores que #x# e retorna uma nova #Treap# #t2# que contém todos esses valores. A operação #split(x)# deve executar em um tempo esperado de $O(\log #n#)$.
 
-  \noindent Aviso: Para esta mdficação funcionar adequadamente e ainda permitir que o método #size()# execute em um tempo constante, [e necessário implementar as modificações em \excref{treap-get}.
+  \noindent Aviso: Para esta modificação funcionar adequadamente e ainda permitir que o método #size()# execute em um tempo constante, é necessário implementar as modificações em \excref{treap-get}.
 \end{exc}
 
 \begin{exc}\exclabel{treap-join}
